[tool.poetry]
name = "mlflow-pytorch-lightning-hydra-mlflow-poetry"
version = "0.1.0"
description = ""
authors = ["KJR020 <johnjiro1114@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
torch = {url = "https://download.pytorch.org/whl/cu117/torch-2.0.0%2Bcu117-cp310-cp310-win_amd64.whl"}
tqdm = "^4.61.2"
pytorch-lightning = "^1.3.8"
mlflow = "^1.19.0"
hydra-colorlog = "^1.1.0"
hydra-core = "^1.1.0"
omegaconf = "^2.1.0"

[tool.poetry.dev-dependencies]
# pysen = {version = "^0.9.1", extras = ["lint"]}
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

